--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "basic-auth": "^2.0.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.0.0",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
     "multer": "^1.4.5-lts.1"
