--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,13 @@
     "basic-auth": "^2.0.1",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.16.1",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
